@@ -34,7 +34,8 @@
 		<div class="product-content">
 			<table class="table table-bordered table-stdiped table-condensed">
 				<thead>
-					<th>序号</th><th>标题</th><th>规格</th><th>数量</th><th>二次销售</th><th>已处理</th><th>备注</th>	<th>退货原因</th>
+					<th>序号</th><th>标题</th><th>规格</th><th>数量</th><th>二次销售</th><th>已处理</th><th>备注</th>
+{#                    <th>退货原因</th>#}
 				</thead>
 				<tbody>
 					{% for prod in refund_products %}
@@ -49,22 +50,22 @@
 					{% else %}<img src="{{ STATIC_URL }}admin/img/icon-no.gif" alt="no">{% endif %}</td>
 					<td>{{ prod.memo }}</td>
 
-                        <td>
-                            <select class="select_reason" cid="{{ prod.id }}" id="reason_select_{{ prod.id }} " >
-                                <option value=''>-------</option>
-                                <option value='0'>其他</option>
-                                <option value='1'>错拍</option>
-                                <option value='2'>缺货</option>
-                                <option value='3'>开线/脱色/脱毛/有色差/有虫洞</option>
-                                <option value='4'>发错货/漏发</option>
-                                <option value='5'>没有发货</option>
-                                <option value='6'>未收到货</option>
-                                <option value='7'>与描述不符</option>
-                                <option value='8'>退运费</option>
-                                <option value='9'>发票问题</option>
-                                <option value='10'>七天无理由退换货</option>
-                            </select>
-                        </td>
+{#                        <td>#}
+{#                            <select class="select_reason" cid="{{ prod.id }}" id="reason_select_{{ prod.id }} " >#}
+{#                                <option value=''>-------</option>#}
+{#                                <option value='0'>其他</option>#}
+{#                                <option value='1'>错拍</option>#}
+{#                                <option value='2'>缺货</option>#}
+{#                                <option value='3'>开线/脱色/脱毛/有色差/有虫洞</option>#}
+{#                                <option value='4'>发错货/漏发</option>#}
+{#                                <option value='5'>没有发货</option>#}
+{#                                <option value='6'>未收到货</option>#}
+{#                                <option value='7'>与描述不符</option>#}
+{#                                <option value='8'>退运费</option>#}
+{#                                <option value='9'>发票问题</option>#}
+{#                                <option value='10'>七天无理由退换货</option>#}
+{#                            </select>#}
+{#                        </td>#}
 					{% endfor %}
 					</tr>
 				</tbody>
