@@ -1,3 +1,5 @@
+########### 2015-7-18 #################
+ALTER TABLE shop_refunds_product ADD reason INT(11) DEFAULT 0;
 ########### 2015-7-16 #################
 alter table flashsale_productdetail add column is_recommend tinyint NOT NULL;
 ########### 2015-7-14 #################
